--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mult-react-scripts",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Customed configuration and scripts for Create React App.",
   "repository": "JoV5/mult-react-scripts",
   "license": "BSD-3-Clause",
@@ -25,7 +25,11 @@
     "babel-core": "6.23.1",
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
-    "babel-loader": "7.0.0-alpha.3",
+    "babel-loader": "6.4.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-react-app": "^2.1.1",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
@@ -52,6 +56,7 @@
     "postcss-loader": "1.3.3",
     "promise": "7.1.1",
     "react-dev-utils": "^0.5.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "0.16.0",
     "url-loader": "0.5.8",
     "webpack": "2.3.2",
@@ -60,8 +65,10 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "lazy-load-react": "^1.3.4",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-router-dom": "^4.1.1"
   },
   "optionalDependencies": {
     "fsevents": "1.0.17"
